--- a/Deep Learning/Level4/Level 4.ipynb
+++ b/Deep Learning/Level4/Level 4.ipynb
@@ -2694,10 +2694,488 @@
   },
   {
    "source": [
-    "## Dataset 클래스와 전처리"
+    "## Dataset 클래스와 전처리\n",
+    "기존의 방식으로 데이터를 처리할 경우 대량의 데이터에 대해서 각각 메모리에 할당해야 되는 경우. 메모리 문제에 직면할 수 밖에 없어진다.  \n",
+    "따라서, 이 문제를 대응할 수 있는 데이터셋 전용 클래스를 정의한다."
    ],
    "cell_type": "markdown",
    "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "\n",
+    "class Dataset:\n",
+    "    \"\"\"\n",
+    "    Dataset Class\n",
+    "\n",
+    "    Parameter\n",
+    "    ---------\n",
+    "    train : 학습 혹은 테스트를 구분짓는 Flag\n",
+    "    data, label : 입력 데이터 & 레이블\n",
+    "\n",
+    "    Methods\n",
+    "    -------\n",
+    "    __getitem__ : indexing 메서드\n",
+    "    __len__ : 해당 클래스의 길이 출력\n",
+    "    prepare : pass (통과) / 파생 클래스에서 이 메서드가 데이터 준비 작업을 하도록 구현해야 한다.\n",
+    "    \"\"\"\n",
+    "    def __init__(self, train=True):\n",
+    "        self.train = train\n",
+    "        self.data = None\n",
+    "        self.label = None\n",
+    "        self.prepare()\n",
+    "\n",
+    "    def __getitem__(self, index):\n",
+    "        assert np.isscalar(index)\n",
+    "        if self.label is None:\n",
+    "            return self.data[index], None # 정답 데이터가 없는 경우를 가정.\n",
+    "        else:\n",
+    "            return self.data[index], self.label[index]\n",
+    "    \n",
+    "    def __len__(self):\n",
+    "        return len(self.data)\n",
+    "\n",
+    "    def prepare(self):\n",
+    "        pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Spiral(Dataset):\n",
+    "    \"\"\"\n",
+    "    Spiral class\n",
+    "    \"\"\"\n",
+    "    def prepare(self):\n",
+    "        self.data, self.label = get_spiral(self.train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import myPackage\n",
+    "\n",
+    "train_set = myPackage.datasets.Spiral(train=True)\n",
+    "print(train_set[0]) # (array([-0.1398, -0.0072], dtype=float32), 1)\n",
+    "print(len(train_set)) # 300"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class BigData(Dataset):\n",
+    "    def __getitem__(index):\n",
+    "        x = np.load(f'data/{index}.npy')\n",
+    "        t = np.load(f'label/{index}.npy')\n",
+    "        return x, t\n",
+    "\n",
+    "    def __len__():\n",
+    "        return 1000000"
+   ]
+  },
+  {
+   "source": [
+    "## 데이터 이어 붙이기"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 데이터를 미니 배치 단위로 로드하는 코드\n",
+    "train_set = myPackage.datasets.Spiral()\n",
+    "\n",
+    "batch_index = [0, 1, 2]\n",
+    "batch = [train_set[i] for i in batch_index]\n",
+    "# batch = [(data_0, label_0), (data_1, label_1), (data_2, label_2)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = np.array([example[0] for example in batch])\n",
+    "y = np.array([example[1] for example in batch])\n",
+    "\n",
+    "print(x.shape) # (3, 2)\n",
+    "print(t.shape) # (3,)"
+   ]
+  },
+  {
+   "source": [
+    "## 학습 코드"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# myPackage/level4_8.py\n",
+    "if '__file__' in globals():\n",
+    "    import os, sys\n",
+    "    print('__file__ in globals at level4_9.py')\n",
+    "    sys.path.append(os.path.join(os.path.dirname(__file__), '..'))\n",
+    "\n",
+    "\n",
+    "import math\n",
+    "import numpy as np\n",
+    "import myPackage\n",
+    "import myPackage.functions as F\n",
+    "from myPackage.models import MLP\n",
+    "from myPackage import optimizers\n",
+    "\n",
+    "\n",
+    "max_epoch = 300\n",
+    "batch_size = 30\n",
+    "hidden_size = 10\n",
+    "lr = 1.0\n",
+    "\n",
+    "train_set = myPackage.datasets.Spiral() # Update\n",
+    "model = MLP((hidden_size, 10))\n",
+    "optimizer = optimizers.SGD(lr).setup(model)\n",
+    "\n",
+    "data_size = len(train_set)\n",
+    "max_iter = math.ceil(data_size / batch_size)\n",
+    "\n",
+    "for epoch in range(max_epoch):\n",
+    "    index = np.random.permutation(data_size)\n",
+    "    sum_loss = 0\n",
+    "\n",
+    "for i in range(max_iter):\n",
+    "    batch_index = index[i * batch_size:(i + 1) * batch_size]\n",
+    "    # Update\n",
+    "    batch = [train_set[i] for i in batch_index]\n",
+    "    batch_x = np.array([example[0] for example in batch])\n",
+    "    batch_t = np.array([example[1] for example in batch])\n",
+    "\n",
+    "    y = model(batch_x)\n",
+    "    loss = F.softmax_cross_entropy(y, batch_t)\n",
+    "    model.cleargrads()\n",
+    "    loss.backward()\n",
+    "    optimizer.update()\n",
+    "\n",
+    "    sum_loss += float(loss.data) * len(batch_t)\n",
+    "\n",
+    "avg_loss = sum_loss / data_size\n",
+    "print(f'epoch {epoch + 1}, loss {avg_loss}')"
+   ]
+  },
+  {
+   "source": [
+    "## 데이터셋 전처리\n",
+    " 데이터셋 전처리\n",
+    "데이터셋 클래스 전처리 기능 추가"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Dataset:\n",
+    "    def __init__(self, train=True, transform=None, target_transform=None):\n",
+    "        self.train = train\n",
+    "        # Update\n",
+    "        self.transform = transform\n",
+    "        self.target_transform = target_transform\n",
+    "        if self.transform is None:\n",
+    "            self.transform = lambda x: x\n",
+    "        if self.target_transform is None:\n",
+    "            self.target_transform = lambda x: x\n",
+    "\n",
+    "        self.data = None\n",
+    "        self.label = None\n",
+    "        self.prepare()\n",
+    "\n",
+    "    def __getitem__(self, index):\n",
+    "        assert np.isscalar(index)\n",
+    "        # Update\n",
+    "        if self.label is None:\n",
+    "            return self.transform(self.data[index]), None\n",
+    "        else:\n",
+    "            return self.transform(self.data[index]), \\\n",
+    "                self.target_transform(self.label[index])\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.data)\n",
+    "\n",
+    "    def prepare(self):\n",
+    "        pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def f(x):\n",
+    "    y = x / 2.0\n",
+    "    return y\n",
+    "\n",
+    "# 이미지 전처리 단계에서 임의의 함수를 추가하여 변환시킬 수 있다.\n",
+    "train_set = myPackage.datasets.Spiral(transform = f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# myPackage/transforms.py 예시\n",
+    "from myPackage import transforms\n",
+    "\n",
+    "f = transforms.Normalize(mean = 0.0, std = 2.0)\n",
+    "train_set = myPackage.datasets.Spiral(transforms = f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 정규화 수행 후, np.float64 타입으로 형변환\n",
+    "f = transforms.Compose([transforms.Normalize(mean = 0.0, std = 2.0), transforms.AsType(np.float64)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Normalize:\n",
+    "    \"\"\"\n",
+    "    Noarmalize a NumPy array with mean and standard deviation.\n",
+    "\n",
+    "    Args\n",
+    "    ----\n",
+    "    mean (float or sequence): mean for all values or sequence of means for each channel.\n",
+    "    std (float or sequence): calc standard deviation for all values or sequence of each channel.\n",
+    "    \"\"\"\n",
+    "    def __init__(self, mean=0, std=1):\n",
+    "        self.mean = mean\n",
+    "        self.std = std\n",
+    "\n",
+    "    def __call__(self, array):\n",
+    "        mean, std = self.mean, self.std\n",
+    "\n",
+    "        if not np.isscalar(mean):\n",
+    "            mshape = [1] * array.ndim\n",
+    "            mshape[0] = len(array) if len(self.mean) == 1 else len(self.mean)\n",
+    "            mean = np.array(self.mean, dtype=array.dtype).reshape(*mshape)\n",
+    "        if not np.isscalar(std):\n",
+    "            rshape = [1] * array.ndim\n",
+    "            rshape[0] = len(array) if len(self.std) == 1 else len(self.std)\n",
+    "            std = np.array(self.std, dtype=array.dtype).reshape(*rshape)\n",
+    "        return (array - mean) / std"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[1, 1]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 7
+    }
+   ],
+   "source": [
+    "test = np.array([[1, 2, 3], [4, 5, 6]])\r\n",
+    "[1] * test.ndim # ndim : 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[1, 1, 1]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 11
+    }
+   ],
+   "source": [
+    "[1] * test.reshape((2, 3, 1)).ndim # ndim : 3"
+   ]
+  },
+  {
+   "source": [
+    "## 미니배치를 뽑아주는 DataLoader\n",
+    "DataLoader는 미니배치 생성 및 데이터셋 뒤섞기 등의 기능을 추가적으로 제공."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "### 반복자(iterator)"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 13
+    }
+   ],
+   "source": [
+    "t = [1, 2, 3]\n",
+    "x = iter(t)\n",
+    "next(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 15
+    }
+   ],
+   "source": [
+    "next(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 16
+    }
+   ],
+   "source": [
+    "next(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "StopIteration",
+     "evalue": "",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mStopIteration\u001b[0m                             Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-17-92de4e9f6b1e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mnext\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mStopIteration\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "next(x)"
+   ]
+  },
+  {
+   "source": [
+    "for 문에서 리스트의 원소를 꺼낼 때 내부적으로 반복자가 사용됨.  \n",
+    "&nbsp&nbsp예를 들어, t = \\[1, 2, 3]이고 for x in t: x 라는 for 구문에 대해 x라는 원소는 iter(t) 값을 next로 빼내는 방식을 이용해 원소를 사용하게 함."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MyIterator:\n",
+    "    def __init__(self, max_cnt):\n",
+    "        self.max_cnt = max_cnt\n",
+    "        self.cnt = 0\n",
+    "\n",
+    "    def __iter__(self):\n",
+    "        return self\n",
+    "\n",
+    "    def __next__(self):\n",
+    "        if self.cnt == self.max_cnt:\n",
+    "            raise StopIteration()\n",
+    "    \n",
+    "        self.cnt += 1\n",
+    "        return self.cnt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
